--- a/package.json
+++ b/package.json
@@ -3,13 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@mantine/carousel": "^7.0.1",
+    "@mantine/code-highlight": "^7.0.1",
+    "@mantine/core": "^7.0.1",
+    "@mantine/dates": "^7.0.1",
+    "@mantine/form": "^7.0.1",
+    "@mantine/hooks": "^7.0.1",
+    "@mantine/modals": "^7.0.2",
+    "@mantine/notifications": "^7.0.2",
+    "@tabler/icons-react": "^2.35.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.5.0",
     "react": "^18.2.0",
+    "react-animated-cursor": "^2.10.1",
     "react-dom": "^18.2.0",
+    "react-google-recaptcha": "^3.1.0",
+    "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "zod": "^3.22.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -34,5 +48,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "postcss": "^8.4.30",
+    "postcss-preset-mantine": "^1.7.0",
+    "postcss-simple-vars": "^7.0.1"
   }
 }
